--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "a web crawler project assignment utilizing node.js and mariadb",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "./node_modules/.bin/sequelize db:migrate",
+    "makemigration": "node ./node_modules/sequelize-auto-migrations/bin/makemigration.js",
+    "update": "node ./app.js",
+    "orderByRam": "cd functions && node ./order-by-ram.js",
+    "filterByCamera": "cd functions && node ./filter-by-camera.js",
+    "test": "node ./test.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +28,10 @@
     "eslint-config-google": "^0.9.1",
     "jquery": "^3.3.1",
     "jsdom": "^11.6.2",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "mysql2": "^1.5.2",
+    "sequelize": "^4.36.0",
+    "sequelize-auto-migrations": "^1.0.2",
+    "sequelize-cli": "^4.0.0"
   }
 }
